--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ img{
     <meta charset="utf-8">
     <title>♠Amit Bhatt Site</title>
   </head>
-  <body>
+  <body  bgcolor="#E6E6FA">
 
 
         <img src="https://pbs.twimg.com/profile_images/1136587788248264704/2dudEYvP_400x400.png" alt="Amit's pic">
